Menu interface e JS

--- a/index.html
+++ b/index.html
@@ -14,6 +14,32 @@
 		<script src="node_modules/less/dist/less.min.js"></script>
 	</head>
 	<body>
+		<span id="hamburguer">Abrir menu</span>
+
+		<section class="menu-principal">
+			<nav>
+				<header>
+					<a href="index.html" class="logoAlternativo">
+						<img src="assets/images/logo-alternativo-pousada-voce-que-sabe.png" alt="Imagem do logo">
+					</a>
+					<a href="index.html" class="logo">
+						<img src="assets/images/logo-pousada-voce-que-sabe.png" alt="Imagem do logo">
+					</a>
+				</header>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="">Suítes</a></li>
+					<li><a href="">Promoções</a></li>
+					<li><a href="">Sobre nós</a></li>
+					<li><a href="">Localização</a></li>
+				</ul>
+				<aside>
+					<ul>
+						<li><a href="https://www.facebook.com/" target="_blank" class="facebook">F</a></li>
+					</ul>
+				</aside>
+			</nav>
+		</section>
 				
 		<!-- scripts -->
 		<script src="node_modules/jquery/dist/jquery.js"></script>
