Adicionando icones e finalizando menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<script src="node_modules/less/dist/less.min.js"></script>
 	</head>
 	<body>
-		<span id="hamburguer">Abrir menu</span>
+		<span id="hamburguer"></span>
 
 		<section class="menu-principal">
 			<nav>
@@ -35,10 +35,206 @@
 				</ul>
 				<aside>
 					<ul>
-						<li><a href="https://www.facebook.com/" target="_blank" class="facebook">F</a></li>
+						<li><a href="https://www.facebook.com/" target="_blank" class="facebook"></a></li>
 					</ul>
 				</aside>
 			</nav>
+		</section>
+
+		<section>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
+			<p>scroll</p>
 		</section>
 				
 		<!-- scripts -->
