Organizando estrutura inicial

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 	<body>
 		<span id="hamburguer"></span>
 
+		<section class="menu-principal-mobile">
+			<img src="assets/images/logo-pousada-voce-que-sabe.png" alt="Imagem do logo">
+		</section>
+
 		<section class="menu-principal">
 			<nav>
 				<header>
@@ -41,201 +45,33 @@
 			</nav>
 		</section>
 
-		<section>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-			<p>scroll</p>
-		</section>
+		<span class="fake"></span>
+		<section id="banner" class="banner-principal"></section>
+
+		<header id="header" class="header-principal">
+			<span class="seta"></span>
+			<h1>
+				BEM-VINDO À<br>
+				POUSADA VOCÊ QUE SABE
+			</h1>
+		</header>
+
+		<!-- initial script -->
+		<script>
+			function estruturaInicial() {
+				var banner = document.getElementById('banner');
+				var alturaTela = document.body.offsetHeight;
+				var header = document.getElementById('header').offsetHeight;
+
+				banner.style.height = ((alturaTela - header) - 100)  + 'px'; // 100 === menu.style.height
+			}
+			window.onload = estruturaInicial;
+
+			// atualiza a estrutura
+			window.addEventListener('resize', function() {
+				estruturaInicial();
+			});
+		</script>
 				
 		<!-- scripts -->
 		<script src="node_modules/jquery/dist/jquery.js"></script>
