--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 			</h1>
 		</header>
 
+		<article class="texto-home">
+			<p>Muito mais que uma <strong>pousada</strong>, uma experiência única <strong>luxuosa e confortável</strong>.</p>
+			<p>Depois de mais de 10 anos no cenário sorocabano, decidimos reinventar a experiência de hospedar-se em uma pousada.</p>
+			<p>São <strong>37 suítes</strong> decoradas unicamente com cores, temas e elementos diferentes.</p>
+		</article>
+
 		<!-- initial script -->
 		<script>
 			function estruturaInicial() {
