Adicionando icones no menu

--- a/index.html
+++ b/index.html
@@ -31,11 +31,36 @@
 					</a>
 				</header>
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="">Suítes</a></li>
-					<li><a href="">Promoções</a></li>
-					<li><a href="">Sobre nós</a></li>
-					<li><a href="">Localização</a></li>
+					<li>
+						<a href="index.html">
+							<span class="icone home"></span>
+							Home
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<span class="icone suites"></span>
+							Suítes
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<span class="icone promocoes"></span>
+							Promoções
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<span class="icone sobre"></span>
+							Sobre nós
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<span class="icone localizacao"></span>
+							Localização
+						</a>
+					</li>
 				</ul>
 				<aside>
 					<ul>
