--- a/production/index.html
+++ b/production/index.html
@@ -30,11 +30,36 @@
 					</a>
 				</header>
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="">Suítes</a></li>
-					<li><a href="">Promoções</a></li>
-					<li><a href="">Sobre nós</a></li>
-					<li><a href="">Localização</a></li>
+					<li>
+						<a href="index.html">
+							<span class="icone home"></span>
+							Home
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<span class="icone suites"></span>
+							Suítes
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<span class="icone promocoes"></span>
+							Promoções
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<span class="icone sobre"></span>
+							Sobre nós
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<span class="icone localizacao"></span>
+							Localização
+						</a>
+					</li>
 				</ul>
 				<aside>
 					<ul>
@@ -54,6 +79,12 @@
 				POUSADA VOCÊ QUE SABE
 			</h1>
 		</header>
+
+		<article class="texto-home">
+			<p>Muito mais que uma <strong>pousada</strong>, uma experiência única <strong>luxuosa e confortável</strong>.</p>
+			<p>Depois de mais de 10 anos no cenário sorocabano, decidimos reinventar a experiência de hospedar-se em uma pousada.</p>
+			<p>São <strong>37 suítes</strong> decoradas unicamente com cores, temas e elementos diferentes.</p>
+		</article>
 
 		<!-- initial script -->
 		<script>
