--- a/index.html
+++ b/index.html
@@ -87,6 +87,46 @@
 			<p>São <strong>37 suítes</strong> decoradas unicamente com cores, temas e elementos diferentes.</p>
 		</article>
 
+		<section class="diferenciais-pousada">
+			<section class="diferenciais">
+				<h1>Diferenciais</h1>
+				<ul>
+					<li>
+						<span class="icone sinuca"></span>
+						Com mesa de sinuca integrada na suíte.
+					</li>
+					<li>
+						<span class="icone coracao"></span>
+						Que possui uma cama e uma hidro no formato de coração.
+					</li>
+					<li>
+						<span class="icone churrasqueira"></span>
+						Com churrasqueira integrada na suíte.
+					</li>
+					<li>
+						<span class="icone carro"></span>
+						Onde a cama é um carro de verdade.
+					</li>
+					<li>
+						<span class="icone massagem"></span>
+						Com uma cama massageadora.
+					</li>
+					<li>
+						<span class="icone vintage"></span>
+						Com uma suíte vintage.
+					</li>
+					<li>
+						<span class="icone oriental"></span>
+						Com uma suíte que relembra o verdadeiro clima oriental.
+					</li>
+					<li>
+						<span class="icone hidro"></span>
+						Que tem mais de 6 formatos de hidros diferentes.
+					</li>
+				</ul>
+			</section>
+		</section>
+
 		<!-- initial script -->
 		<script>
 			function estruturaInicial() {
@@ -106,6 +146,7 @@
 				
 		<!-- scripts -->
 		<script src="node_modules/jquery/dist/jquery.js"></script>
+		<script src="vendor/magnific-popup/dist/jquery.magnific-popup.js"></script>
 		<script src="dev/js/main.js"></script>
 	</body>
 </html>
