Estrutura html suites (teste)

--- a/production/index.html
+++ b/production/index.html
@@ -126,6 +126,19 @@
 			</section>
 		</section>
 
+		<section class="suites-home">
+			<ul>
+				<li><a href="prata.html">prata</a></li>
+				<li><a href="rubi-duplex.html">rubi duplex</a></li>
+				<li><a href="esmeralda.html">esmeralda</a></li>
+				<li><a href="ouro.html">ouro</a></li>
+				<li><a href="brilhante.html">brilhante</a></li>
+				<li><a href="diamante.html">diamante</a></li>
+				<li><a href="perola.html">perola</a></li>
+				<li><a href="rubi.html">rubi</a></li>
+			</ul>
+		</section>
+
 		<!-- initial script -->
 		<script>
 			function estruturaInicial() {
