Organizando estrutura das suites

--- a/index.html
+++ b/index.html
@@ -38,25 +38,25 @@
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="suites.html">
 							<span class="icone suites"></span>
 							Suítes
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="promocoes.html">
 							<span class="icone promocoes"></span>
 							Promoções
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="sobre.html">
 							<span class="icone sobre"></span>
 							Sobre nós
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="localizacao.html">
 							<span class="icone localizacao"></span>
 							Localização
 						</a>
@@ -71,6 +71,7 @@
 		</section>
 
 		<span class="fake"></span>
+		
 		<section id="banner" class="banner-principal"></section>
 
 		<header id="header" class="header-principal">
@@ -159,7 +160,6 @@
 				
 		<!-- scripts -->
 		<script src="node_modules/jquery/dist/jquery.js"></script>
-		<script src="vendor/magnific-popup/dist/jquery.magnific-popup.js"></script>
 		<script src="dev/js/main.js"></script>
 	</body>
 </html>
