--- a/brilhante.html
+++ b/brilhante.html
@@ -80,5 +80,12 @@ MESA DE BILHAR, CHURRASQUEIRA, SAUNA, HIDRO SPA COM CASCATA E TETO SOLAR</p>
 		<br><p>------</p><br>
 
 		<a href="suites.html">VOLTAR</a>
+
+		<footer class="rodape-principal">
+			<section>
+				<p>Copyright &copy; 2017 Pousada Você Que Sabe  &bull; Todos os direitos reservados</p>
+				<p>Desenvolvido por <a href="http://chefdesign.com.br/" target="_blank">ChefDesign</a></p>
+			</section>
+		</footer>
 	</body>
 </html>
