--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		</section>
 
 		<span class="fake"></span>
-		
+
 		<section id="banner" class="banner-principal"></section>
 
 		<header id="header" class="header-principal">
@@ -140,6 +140,13 @@
 				<li><a href="rubi.html">rubi</a></li>
 			</ul>
 		</section>
+
+		<footer class="rodape-principal">
+			<section>
+				<p>Copyright &copy; 2017 Pousada Você Que Sabe  &bull; Todos os direitos reservados</p>
+				<p>Desenvolvido por <a href="http://chefdesign.com.br/" target="_blank">ChefDesign</a></p>
+			</section>
+		</footer>
 
 		<!-- initial script -->
 		<script>
