--- a/diamante.html
+++ b/diamante.html
@@ -96,5 +96,12 @@
 		<br><p>------</p><br>
 
 		<a href="suites.html">VOLTAR</a>
+
+		<footer class="rodape-principal">
+			<section>
+				<p>Copyright &copy; 2017 Pousada Você Que Sabe  &bull; Todos os direitos reservados</p>
+				<p>Desenvolvido por <a href="http://chefdesign.com.br/" target="_blank">ChefDesign</a></p>
+			</section>
+		</footer>
 	</body>
 </html>
