--- a/sobre.html
+++ b/sobre.html
@@ -69,5 +69,14 @@
 				</aside>
 			</nav>
 		</section>
+
+		<span class="fake"></span>
+
+		<footer class="rodape-principal">
+			<section>
+				<p>Copyright &copy; 2017 Pousada Você Que Sabe  &bull; Todos os direitos reservados</p>
+				<p>Desenvolvido por <a href="http://chefdesign.com.br/" target="_blank">ChefDesign</a></p>
+			</section>
+		</footer>
 	</body>
 </html>
