--- a/suites.html
+++ b/suites.html
@@ -84,5 +84,12 @@
 				<li><a href="rubi.html">rubi</a></li>
 			</ul>
 		</section>
+
+		<footer class="rodape-principal">
+			<section>
+				<p>Copyright &copy; 2017 Pousada Você Que Sabe  &bull; Todos os direitos reservados</p>
+				<p>Desenvolvido por <a href="http://chefdesign.com.br/" target="_blank">ChefDesign</a></p>
+			</section>
+		</footer>
 	</body>
 </html>
