Adicioando estilo para menu ativo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<ul>
 					<li>
 						<a href="index.html">
-							<span class="icone home"></span>
+							<span class="icone home ativo"></span>
 							Home
 						</a>
 					</li>
