--- a/localizacao.html
+++ b/localizacao.html
@@ -57,7 +57,7 @@
 					</li>
 					<li>
 						<a href="localizacao.html">
-							<span class="icone localizacao"></span>
+							<span class="icone localizacao ativo"></span>
 							Localização
 						</a>
 					</li>
