--- a/promocoes.html
+++ b/promocoes.html
@@ -45,7 +45,7 @@
 					</li>
 					<li>
 						<a href="promocoes.html">
-							<span class="icone promocoes"></span>
+							<span class="icone promocoes ativo"></span>
 							Promoções
 						</a>
 					</li>
