--- a/sobre.html
+++ b/sobre.html
@@ -51,7 +51,7 @@
 					</li>
 					<li>
 						<a href="sobre.html">
-							<span class="icone sobre"></span>
+							<span class="icone sobre ativo"></span>
 							Sobre nós
 						</a>
 					</li>
