--- a/suites.html
+++ b/suites.html
@@ -39,7 +39,7 @@
 					</li>
 					<li>
 						<a href="suites.html">
-							<span class="icone suites"></span>
+							<span class="icone suites ativo"></span>
 							Suítes
 						</a>
 					</li>
