--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 		<section class="diferenciais-pousada">
 			<section class="diferenciais">
 				<h1>Diferenciais</h1>
+				
 				<ul>
 					<li>
 						<span class="icone sinuca"></span>
@@ -197,6 +198,67 @@
 					</a>
 				</li>
 			</ul>
+		</section>
+
+		<section class="facilidades-pousada">
+			<h1>Facilidades</h1>
+
+			<section class="facilidades">
+				<ul>
+					<li>
+						<a href="javascript:void(0)">
+							<span class="icone seguranca"></span>
+							<span class="texto">Segurança</span>
+							<span class="mais">+</span>
+						</a>
+					</li>
+					<li>
+						<a href="javascript:void(0)">
+							<span class="icone agua"></span>
+							<span class="texto">Falta d'água</span>
+							<span class="mais">+</span>
+						</a>
+					</li>
+					<li>
+						<a href="javascript:void(0)">
+							<span class="icone tv"></span>
+							<span class="texto">TV</span>
+							<span class="mais">+</span>
+						</a>
+					</li>
+					<li>
+						<a href="javascript:void(0)">
+							<span class="icone seducao"></span>
+							<span class="texto">Sedução e fetiche</span>
+							<span class="mais">+</span>
+						</a>
+					</li>
+				</ul>
+
+				<ul>
+					<li>
+						<a href="javascript:void(0)">
+							<span class="icone permanencia"></span>
+							<span class="texto">Permanência</span>
+							<span class="mais">+</span>
+						</a>
+					</li>
+					<li>
+						<a href="javascript:void(0)">
+							<span class="icone wifi"></span>
+							<span class="texto">Wi-fi</span>
+							<span class="mais">+</span>
+						</a>
+					</li>
+					<li>
+						<a href="javascript:void(0)">
+							<span class="icone ar"></span>
+							<span class="texto">Ar condicionado</span>
+							<span class="mais">+</span>
+						</a>
+					</li>
+				</ul>
+			</section>
 		</section>
 
 		<footer class="rodape-principal">
