--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 		<span class="fake"></span>
 
-		<section id="banner" class="banner-principal"></section>
+		<section id="banner" class="banner-principal home"></section>
 
 		<header id="header" class="header-principal">
 			<span class="seta"></span>
@@ -258,6 +258,20 @@
 						</a>
 					</li>
 				</ul>
+			</section>
+		</section>
+
+		<section class="nossas-promocoes">
+			<section class="promocoes">
+				<h1>Promoções</h1>
+				<span>Informe o seu e-mail e participe da promoção que sorteia todo o mês a uma permanência de 12 horas grátis em uma suíte diferenciada para você ter momentos especiais.</span>
+				<form action="">
+					<label for="nome">Nome</label>
+					<input type="text" id="#nome" placeholder="Digite seu nome">
+					<label for="email">E-mail</label>
+					<input type="email" id="#email" placeholder="Digite seu e-mail">
+					<button type="submit" name="enviar" value="foo">Enviar</button>
+				</form>
 			</section>
 		</section>
 
