--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</header>
 				<ul>
 					<li>
-						<a href="index.html">
+						<a href="index.html" class="ativo">
 							<span class="icone home ativo"></span>
 							Home
 						</a>
