--- a/localizacao.html
+++ b/localizacao.html
@@ -56,7 +56,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="localizacao.html">
+						<a href="localizacao.html" class="ativo">
 							<span class="icone localizacao ativo"></span>
 							Localização
 						</a>
@@ -100,5 +100,9 @@
 				<p>Desenvolvido por <a href="http://chefdesign.com.br/" target="_blank">ChefDesign</a></p>
 			</section>
 		</footer>
+
+		<!-- scripts -->
+		<script src="node_modules/jquery/dist/jquery.js"></script>
+		<script src="dev/js/main.js"></script>
 	</body>
 </html>
