--- a/promocoes.html
+++ b/promocoes.html
@@ -44,7 +44,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="promocoes.html">
+						<a href="promocoes.html" class="ativo">
 							<span class="icone promocoes ativo"></span>
 							Promoções
 						</a>
@@ -100,5 +100,9 @@
 				<p>Desenvolvido por <a href="http://chefdesign.com.br/" target="_blank">ChefDesign</a></p>
 			</section>
 		</footer>
+
+		<!-- scripts -->
+		<script src="node_modules/jquery/dist/jquery.js"></script>
+		<script src="dev/js/main.js"></script>
 	</body>
 </html>
