--- a/sobre.html
+++ b/sobre.html
@@ -50,7 +50,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="sobre.html">
+						<a href="sobre.html" class="ativo">
 							<span class="icone sobre ativo"></span>
 							Sobre nós
 						</a>
@@ -241,5 +241,9 @@
 				estruturaInicial();
 			});
 		</script>
+
+		<!-- scripts -->
+		<script src="node_modules/jquery/dist/jquery.js"></script>
+		<script src="dev/js/main.js"></script>
 	</body>
 </html>
