--- a/brilhante.html
+++ b/brilhante.html
@@ -109,5 +109,9 @@ MESA DE BILHAR, CHURRASQUEIRA, SAUNA, HIDRO SPA COM CASCATA E TETO SOLAR</p>
 				<p>Desenvolvido por <a href="http://chefdesign.com.br/" target="_blank">ChefDesign</a></p>
 			</section>
 		</footer>
+
+		<!-- scripts -->
+		<script src="node_modules/jquery/dist/jquery.js"></script>
+		<script src="dev/js/main.js"></script>
 	</body>
 </html>
