--- a/suites.html
+++ b/suites.html
@@ -38,7 +38,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="suites.html">
+						<a href="suites.html" class="ativo">
 							<span class="icone suites ativo"></span>
 							Suítes
 						</a>
@@ -113,5 +113,9 @@
 				<p>Desenvolvido por <a href="http://chefdesign.com.br/" target="_blank">ChefDesign</a></p>
 			</section>
 		</footer>
+
+		<!-- scripts -->
+		<script src="node_modules/jquery/dist/jquery.js"></script>
+		<script src="dev/js/main.js"></script>
 	</body>
 </html>
